changed overflow to correctly view at smartphones

--- a/styles.scss
+++ b/styles.scss
@@ -14,7 +14,6 @@ body{
     text-align: center;
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
 
     h1{
         margin: 10px;
